# SGDA-Fall-Game-Jam-2025

./: ACTIONABLE_PHASE_TRACKER.md  BSP notes  BSP_CULLING_FIX_UPDATE.md  BSP_PRODUCTION_REFACTOR_ROADMAP.md  BSP_RENDERING_REFACTOR.md  CACHE_SYSTEM_MIGRATION_REPORT.md  CMakeLists.txt  CODE_STYLE_GUIDE.md  Collision_Physics_System_Documentation.md  DATA_FLOW_DIAGRAM.md  DEVELOPMENT_ROADMAP_TRACKER.md  ECS_ARCHITECTURE_ANALYSIS.md  Gameplan.md  MAP_FORMAT_EXTENSIONS.md  MAP_FORMAT_SPECIFICATION.md  MATERIAL_SYSTEM_REFACTOR_GAMEPLAN.md  MESH_MATERIAL_PIPELINE_ANALYSIS.md  NETWORKING_INTEGRATION_COMPLETE.md  NETWORKING_INTEGRATION_GUIDE.md  NETWORK_ARCHITECTURE_READINESS.md  PAINT_STRIKE_SHADER_SYSTEM_ROADMAP.md  QUAKE_BSP_PVS_RENDERING_ANALYSIS.md  QUAKE_STYLE_BSP_RENDERING_GAMEPLAN.md  RAYLIB_LIGHTING_INTEGRATION_PHASE_TRACKER.md  RAYLIB_LIGHTING_STRATEGY_ANALYSIS.md  RAYLIB_RENDERING_RECOMMENDATIONS.md  README.md  RENDERING_ANALYSIS.md  RENDERING_ISSUES_ANALYSIS.md  RENDERING_MATERIAL_ANALYSIS.md  RENDERING_PIPELINE_ANALYSIS_AND_ROADMAP.md  RENDERING_PIPELINE_DOCUMENTATION.md  RENDERING_REFACTOR_TRACKER.md  RENDERING_SYSTEM_ANALYSIS.md  Raylib Examples.txt  SHADER_CACHING_INSTANCING_PLAN.md  SHADOW_MAPPING_ANALYSIS.md  SHADOW_MAPPING_COMPREHENSIVE_ANALYSIS.md  SHADOW_MAPPING_FLOW_ANALYSIS.md  TEXTURE_SHADER_ANALYSIS.md  (+5 more)
assets/maps/: test_level.map
attrib/: Attribute Tracker
build_editor/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini  paintstrike_editor
docs/: DEVELOPMENT_ROADMAP_TRACKER.md  GAME_OBJECT_SYSTEM_DOCUMENTATION.md  WORLD_GEOMETRY_PIPELINE.md  material_system_research.md  raylibcheatsheet.txt  raymathcheatsheet.txt
editor/: CMakeLists.txt  main.cpp
editor/docs/: EDITOR_ARCHITECTURE.md
editor/src/assets/: AssetManager.h
editor/src/core/: Application.cpp  Application.h  EditorConfig.cpp  EditorConfig.h  Logger.cpp  Logger.h  Project.cpp  Project.h
editor/src/input/: InputManager.h
editor/src/scene/: BrushManager.cpp  BrushManager.h  Scene.h
editor/src/selection/: GizmoManager.cpp  GizmoManager.h  SelectionManager.cpp  SelectionManager.h
editor/src/tools/: ToolManager.h
editor/src/ui/: CommandManager.cpp  CommandManager.h  MainWindow.cpp  MainWindow.h
editor/src/viewport/: CameraManager.cpp  CameraManager.h  GridManager.cpp  GridManager.h
raylib_references/: RAYLIB_SKYBOX_REFERENCE.c  Raylib Examples
references/: README.md  detailedshadowmap  substackshadowmapref
servers/: TCPServer.js  UDPServer.js
src/: Advanced Raylib Examples  CMakeLists.txt  Game.cpp  Game.h  main.cpp
src/core/: CacheSystem.h  Engine.cpp  Engine.h  StateManager.cpp  StateManager.h
src/ecs/: Component.h  ComponentRegistry.cpp  ComponentRegistry.h  Entity.cpp  Entity.h  System.cpp  System.h
src/ecs/Components/: AudioComponent.cpp  AudioComponent.h  Collidable.cpp  Collidable.h  EnemyComponent.cpp  EnemyComponent.h  GameObject.cpp  GameObject.h  InterpolatedTransformComponent.h  LODComponent.h  LightComponent.cpp  LightComponent.h  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  NetworkComponent.h  Player.cpp  Player.h  Position.cpp  Position.h  ReplicationComponent.h  ShaderComponent.h  SpawnPointComponent.cpp  SpawnPointComponent.h  Sprite.cpp  Sprite.h  TextureComponent.h  TransformComponent.cpp  TransformComponent.h  TriggerComponent.cpp  TriggerComponent.h  Velocity.cpp  Velocity.h
src/ecs/Systems/: AssetSystem.cpp  AssetSystem.h  CacheSystem.cpp  CacheSystem.h  CollisionSystem.cpp  CollisionSystem.h  EntitySystem.cpp  EntitySystem.h  GameObjectSystem.cpp  GameObjectSystem.h  InputSystem.cpp  InputSystem.h  InterpolationSystem.h  LODSystem.cpp  LODSystem.h  LightSystem.cpp  LightSystem.h  MaterialSystem.cpp  MaterialSystem.h  MeshSystem.cpp  MeshSystem.h  NetworkSystem.cpp  NetworkSystem.h  PlayerSystem.cpp  PlayerSystem.h  RenderSystem.cpp  RenderSystem.h  ReplicationSystem.h  WorldSystem.cpp  WorldSystem.h
src/events/: Event.h  EventManager.cpp  EventManager.h  NetworkEvents.h
src/input/: Input.cpp  Input.h
src/math/: AABB.h
src/networking/: Component.h  TransportLayer.h
src/physics/: PhysicsSystem.cpp  PhysicsSystem.h
src/rendering/: Renderer.cpp  Renderer.h  Skybox.cpp  Skybox.h  TextureManager.cpp  TextureManager.h  WorldRenderer.cpp  WorldRenderer.h
src/shaders/: ShaderSystem.h
src/shaders/depth/: depth.fs  depth.vs
src/shaders/lighting/: lighting.fs
src/shaders/skybox/: skybox.vs
src/ui/: ConsoleSystem.cpp  ConsoleSystem.h
src/utils/: Logger.cpp  Logger.h  PathUtils.cpp  PathUtils.h  StringUtils.cpp  StringUtils.h
src/world/: BSPTree.cpp  BSPTree.h  BSPTreeSystem.cpp  BSPTreeSystem.h  Brush.h  EntityFactory.cpp  EntityFactory.h  MapLoader.cpp  MapLoader.h  MaterialValidator.cpp  MaterialValidator.h  WorldGeometry.cpp  WorldGeometry.h
